# preferences-rs

./: .gitignore  Cargo.toml  Justfile  LICENSE.txt  README.md
.github/workflows/: ci.yaml  ci2.yaml
scripts/: release
scripts/ci/: check  format  test
src/: lib.rs  security.rs
