[package]
name = "preferences"
version = "2.0.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"

description = "Read and write user-specific application data (in stable Rust)"
documentation = "https://docs.rs/preferences"
repository = "https://github.com/AndyBarron/preferences-rs"
readme = "README.md"
keywords = ["preferences", "user", "data", "persistent", "storage"]
categories = ["configuration"]
license = "MIT-0"

[dependencies]
app_dirs = { package = "app_dirs2", version = "2.5" }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
